ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/TBM_Business_Location_Dt__c.object-meta.xml
<CustomObject>
    <label>TBM Business Location Dt</label>
    <nameField>
        <label>TBM_Business_Location_Dt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TBM Business Location Dt</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>