ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Active_From__c.field-meta.xml
<CustomField>
    <fullName>Active_From__c</fullName>
    <label>Active From</label>
    <type>DateTime</type>
</CustomField>