ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Active_To__c.field-meta.xml
<CustomField>
    <fullName>Active_To__c</fullName>
    <label>Active To</label>
    <type>DateTime</type>
</CustomField>