ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Address_3__c.field-meta.xml
<CustomField>
    <fullName>Address_3__c</fullName>
    <label>Address Line 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>