ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <label>Advance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>