ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>