ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <length>40</length>
    <type>Text</type>
</CustomField>