ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <label>BankCode</label>
    <length>9</length>
    <type>Text</type>
</CustomField>