ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Bl_Code__c.field-meta.xml
<CustomField>
    <fullName>Bl_Code__c</fullName>
    <label>Bl Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>