ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/BL_Name__c.field-meta.xml
<CustomField>
    <fullName>BL_Name__c</fullName>
    <label>BL Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>