ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Block_Name__c.field-meta.xml
<CustomField>
    <fullName>Block_Name__c</fullName>
    <label>Block Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>