ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Business_Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Business_Active_Flag__c</fullName>
    <label>Business Active Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>