ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Business_Hub__c.field-meta.xml
<CustomField>
    <fullName>Business_Hub__c</fullName>
    <label>Business Hub</label>
    <length>50</length>
    <type>Text</type>
</CustomField>