ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Checker_Date__c.field-meta.xml
<CustomField>
    <fullName>Checker_Date__c</fullName>
    <label>Checker Date</label>
    <type>DateTime</type>
</CustomField>