ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Checker_Id__c.field-meta.xml
<CustomField>
    <fullName>Checker_Id__c</fullName>
    <label>Checker Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>