ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/CVO_Presense__c.field-meta.xml
<CustomField>
    <fullName>CVO_Presense__c</fullName>
    <label>CVO Presense</label>
    <length>1</length>
    <type>Text</type>
</CustomField>