ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/DD_Charges__c.field-meta.xml
<CustomField>
    <fullName>DD_Charges__c</fullName>
    <label>DD Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>