ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <length>20</length>
    <type>Text</type>
</CustomField>