ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/DM_Flag__c.field-meta.xml
<CustomField>
    <fullName>DM_Flag__c</fullName>
    <label>DM Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>