ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/DO_Issuance__c.field-meta.xml
<CustomField>
    <fullName>DO_Issuance__c</fullName>
    <label>DO Issuance</label>
    <length>2</length>
    <type>Text</type>
</CustomField>