ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/DO_Issue_Loc__c.field-meta.xml
<CustomField>
    <fullName>DO_Issue_Loc__c</fullName>
    <label>DO Issue Loc</label>
    <length>4</length>
    <type>Text</type>
</CustomField>