ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/ECS_flag__c.field-meta.xml
<CustomField>
    <fullName>ECS_flag__c</fullName>
    <label>ECS flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>