ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <label>Email Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>