ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Enable_Osc__c.field-meta.xml
<CustomField>
    <fullName>Enable_Osc__c</fullName>
    <label>Enable Osc</label>
    <length>1</length>
    <type>Text</type>
</CustomField>