ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Fax_No__c.field-meta.xml
<CustomField>
    <fullName>Fax_No__c</fullName>
    <label>Fax No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>