ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Finacle_Pnemonic_Code__c.field-meta.xml
<CustomField>
    <fullName>Finacle_Pnemonic_Code__c</fullName>
    <label>Finacle Pnemonic Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>