ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/From_Dt__c.field-meta.xml
<CustomField>
    <fullName>From_Dt__c</fullName>
    <label>From Date</label>
    <type>DateTime</type>
</CustomField>