ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Geo_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Geo_State_Code__c</fullName>
    <label>Geo State Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>