ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/GST_ISD_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GST_ISD_GSTIN__c</fullName>
    <label>GST ISD GSTIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>