ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/GST_ISD_Status__c.field-meta.xml
<CustomField>
    <fullName>GST_ISD_Status__c</fullName>
    <label>GST ISD Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>