ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/GST_Related_Party_Flag__c.field-meta.xml
<CustomField>
    <fullName>GST_Related_Party_Flag__c</fullName>
    <label>GST Related Party Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>