ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/GST_State_Code__c.field-meta.xml
<CustomField>
    <fullName>GST_State_Code__c</fullName>
    <label>GST State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>