ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/IBL_Location_Mapping__c.field-meta.xml
<CustomField>
    <fullName>IBL_Location_Mapping__c</fullName>
    <label>IBL Location Mapping</label>
    <length>15</length>
    <type>Text</type>
</CustomField>