ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/IBL_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>IBL_Location_Name__c</fullName>
    <label>IBL Location Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>