ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/IBL_Pnemonic_Code__c.field-meta.xml
<CustomField>
    <fullName>IBL_Pnemonic_Code__c</fullName>
    <label>IBL Pnemonic Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>