ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/LandLord_Address1__c.field-meta.xml
<CustomField>
    <fullName>LandLord_Address1__c</fullName>
    <label>LandLord Address Line1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>