ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/LandLord_Address3__c.field-meta.xml
<CustomField>
    <fullName>LandLord_Address3__c</fullName>
    <label>LandLord Address Line3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>