ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/LandLord_Email__c.field-meta.xml
<CustomField>
    <fullName>LandLord_Email__c</fullName>
    <label>LandLord Email</label>
    <length>40</length>
    <type>Text</type>
</CustomField>