ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/LandLord_Fax_No__c.field-meta.xml
<CustomField>
    <fullName>LandLord_Fax_No__c</fullName>
    <label>LandLord Fax No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>