ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/LandLord_MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>LandLord_MobileNumber__c</fullName>
    <label>LandLord MobileNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>