ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/LandLord_Name__c.field-meta.xml
<CustomField>
    <fullName>LandLord_Name__c</fullName>
    <label>LandLord Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>