ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/LandLord_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>LandLord_PhoneNumber__c</fullName>
    <label>LandLord PhoneNumber</label>
    <length>15</length>
    <type>Text</type>
</CustomField>