ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/LandLord_Pincode__c.field-meta.xml
<CustomField>
    <fullName>LandLord_Pincode__c</fullName>
    <label>LandLord Pincode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>