ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/LandLord_State__c.field-meta.xml
<CustomField>
    <fullName>LandLord_State__c</fullName>
    <label>LandLord State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>