ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/LandLord_STDISD__c.field-meta.xml
<CustomField>
    <fullName>LandLord_STDISD__c</fullName>
    <label>LandLord STDISD</label>
    <length>15</length>
    <type>Text</type>
</CustomField>