ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/LB_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>LB_Email_Id__c</fullName>
    <label>LB Email Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>