ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Mand_Renew_Dt__c.field-meta.xml
<CustomField>
    <fullName>Mand_Renew_Dt__c</fullName>
    <label>Mand Renew Date</label>
    <type>DateTime</type>
</CustomField>