ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Office_Premises__c.field-meta.xml
<CustomField>
    <fullName>Office_Premises__c</fullName>
    <label>Office Premises</label>
    <length>40</length>
    <type>Text</type>
</CustomField>