ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/OGL_Bl_Code__c.field-meta.xml
<CustomField>
    <fullName>OGL_Bl_Code__c</fullName>
    <label>OGL Bl Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>