ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Old_CV_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_CV_Code__c</fullName>
    <label>Old CV Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>