ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Operating_From__c.field-meta.xml
<CustomField>
    <fullName>Operating_From__c</fullName>
    <label>Operating From</label>
    <length>3</length>
    <type>Text</type>
</CustomField>