ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/PACT_Payment_Hub__c.field-meta.xml
<CustomField>
    <fullName>PACT_Payment_Hub__c</fullName>
    <label>PACT Payment Hub</label>
    <length>3</length>
    <type>Text</type>
</CustomField>