ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Pan_No__c.field-meta.xml
<CustomField>
    <fullName>Pan_No__c</fullName>
    <label>Pan Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>