ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Part_I_Code__c.field-meta.xml
<CustomField>
    <fullName>Part_I_Code__c</fullName>
    <label>Part I Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>