ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Payment_Location__c.field-meta.xml
<CustomField>
    <fullName>Payment_Location__c</fullName>
    <label>Payment Location</label>
    <length>40</length>
    <type>Text</type>
</CustomField>