ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Receipt_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Prefix__c</fullName>
    <label>Receipt Prefix</label>
    <length>7</length>
    <type>Text</type>
</CustomField>