ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/RPM_Code__c.field-meta.xml
<CustomField>
    <fullName>RPM_Code__c</fullName>
    <label>RPM Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>