ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/SA_IBL_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>SA_IBL_Branch_Code__c</fullName>
    <label>SA IBL Branch Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>