ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Ser_Tax_Reg_N0__c.field-meta.xml
<CustomField>
    <fullName>Ser_Tax_Reg_N0__c</fullName>
    <label>Service Tax Registration Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>