ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Session_No__c.field-meta.xml
<CustomField>
    <fullName>Session_No__c</fullName>
    <label>Session No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>