ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/SO_Flag__c.field-meta.xml
<CustomField>
    <fullName>SO_Flag__c</fullName>
    <label>SO Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>