ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Std_Isd__c.field-meta.xml
<CustomField>
    <fullName>Std_Isd__c</fullName>
    <label>Std ISD</label>
    <length>8</length>
    <type>Text</type>
</CustomField>