ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/Tab_Access__c.field-meta.xml
<CustomField>
    <fullName>Tab_Access__c</fullName>
    <label>Tab Access</label>
    <length>1</length>
    <type>Text</type>
</CustomField>