ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Business_Location_Dt__c/fields/To_Dt__c.field-meta.xml
<CustomField>
    <fullName>To_Dt__c</fullName>
    <label>To Date</label>
    <type>DateTime</type>
</CustomField>